# hedgehog-inline-csharp-testing

./: .gitignore  LICENSE  README.md  Setup.hs  default.nix  hedgehog-inline-csharp-testing.cabal  hedgehog-inline-java-testing.cabal  hedgehog-inline-java-testing.nix  shell.nix  stack.yaml
src/: CircularBuffer.hs
src/main/haskell/: CircularBuffer.hs
src/main/java/example/: CircularBuffer.java
src/test/haskell/: Main.hs
test/: test.hs
