name:                hedgehog-inline-java-testing
version:             0.1
synopsis:            Example of using Hedgehog's model-based state machine
                     testing together with inline-java
author:              Oskar Wickström
build-type:          Custom
cabal-version:       >=1.18
license:             BSD3
license-file:        LICENSE

custom-setup
  setup-depends:      Cabal >=1.18
                    , base <5
                    , inline-java

library
  exposed-modules:    CircularBuffer
  hs-source-dirs:     src/main/haskell
  build-depends:      base <5
                    , jni
                    , jvm
                    , inline-java
                    , template-haskell
                    , text
  default-language:   Haskell2010
  ghc-options:        -fplugin=Language.Java.Inline.Plugin

test-suite hedgehog-inline-java-testing
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     src/test/haskell
  build-depends:      base <5
                    , hedgehog
                    , hedgehog-inline-java-testing
                    , inline-java
                    , jni
                    , jvm
                    , template-haskell
                    , text
  default-language:   Haskell2010
